# mongouvernail-app

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
sentinelle-reports/: sentinelle-report-20260322-1702.html
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CommandPalette.jsx  ConfirmDialog.jsx  CustomSelect.jsx  ListEditor.jsx  Logo.jsx  NoteEditor.jsx  NotificationBell.jsx  Onboarding.jsx  Sidebar.jsx  UpdateBanner.jsx
src/data/: seed.js
src/db/: database.js  dbManager.js  storage.js
src/hooks/: useNotifications.js
src/pages/: Calendar.jsx  Clients.jsx  CommandCenter.jsx  Documents.jsx  Finances.jsx  Goals.jsx  Projects.jsx  SettingsPage.jsx  Tasks.jsx  Trash.jsx
src/store/: useStore.js
src/utils/: constants.js  customLists.js  helpers.js  updateChecker.js
website/: index.html
