[package]
name = "mongouvernail"
version = "1.1.2"
description = "MonGouvernail - Tableau de bord personnel"
authors = ["Hugo Morales"]
edition = "2021"

[lib]
name = "mongouvernail_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
